# rusty-robots

./: Cargo.toml  README.md  build.rs
client/: package-lock.json  package.json  svelte.config.js
client/src/routes/: +error.svelte  +page.svelte
client/src/routes/room/[code]/: +page.svelte  +page.ts
src/: api.rs  game.rs  game_server.rs  main.rs
src/game_server/: room.rs  validation.rs
