[package]
name = "rusty-robots"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "ws"] }
base64 = "0.22.1"
bimap = "0.6.3"
futures-util = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["client"]
client = []
